--- a/TallerProgramacion2020.csproj
+++ b/TallerProgramacion2020.csproj
@@ -58,6 +58,12 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\Form1.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form1.Designer.cs">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormManageUsers.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,17 +82,23 @@
     <Compile Include="Forms\FormMenu.designer.cs">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormRateMovieOrSerie.cs">
+    <Compile Include="Forms\FormProfile.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormRateMovieOrSerie.designer.cs">
-      <DependentUpon>FormRateMovieOrSerie.cs</DependentUpon>
+    <Compile Include="Forms\FormProfile.Designer.cs">
+      <DependentUpon>FormProfile.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\FormRegisterUser.cs">
+    <Compile Include="Forms\FormRateMovieOrSeries.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\FormRegisterUser.designer.cs">
-      <DependentUpon>FormRegisterUser.cs</DependentUpon>
+    <Compile Include="Forms\FormRateMovieOrSeries.designer.cs">
+      <DependentUpon>FormRateMovieOrSeries.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormRegisterAdminUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormRegisterAdminUser.designer.cs">
+      <DependentUpon>FormRegisterAdminUser.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\FormSearchMoviesOrSeries.cs">
       <SubType>Form</SubType>
@@ -105,6 +117,12 @@
     </Compile>
     <Compile Include="Forms\FormSignIn.designer.cs">
       <DependentUpon>FormSignIn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\FormUsers.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormUsers.Designer.cs">
+      <DependentUpon>FormUsers.cs</DependentUpon>
     </Compile>
     <Compile Include="MediaManager\DAL\EntityFramework\MediaManagerDbContext.cs" />
     <Compile Include="MediaManager\DAL\EntityFramework\Repository.cs" />
@@ -127,12 +145,20 @@
     <Compile Include="MediaManager\IO\UserDTO.cs" />
     <Compile Include="MediaManager\MediaManagerBack.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Forms\Form1.resx">
+      <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormManageUsers.resx">
       <DependentUpon>FormManageUsers.cs</DependentUpon>
     </EmbeddedResource>
@@ -142,11 +168,14 @@
     <EmbeddedResource Include="Forms\FormMenu.resx">
       <DependentUpon>FormMenu.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormRateMovieOrSerie.resx">
-      <DependentUpon>FormRateMovieOrSerie.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormProfile.resx">
+      <DependentUpon>FormProfile.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\FormRegisterUser.resx">
-      <DependentUpon>FormRegisterUser.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\FormRateMovieOrSeries.resx">
+      <DependentUpon>FormRateMovieOrSeries.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormRegisterAdminUser.resx">
+      <DependentUpon>FormRegisterAdminUser.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSearchMoviesOrSeries.resx">
       <DependentUpon>FormSearchMoviesOrSeries.cs</DependentUpon>
@@ -156,6 +185,13 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormSignIn.resx">
       <DependentUpon>FormSignIn.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormUsers.resx">
+      <DependentUpon>FormUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSHARP.Targets" />
