--- a/app.config
+++ b/app.config
@@ -25,6 +25,6 @@
     </DbProviderFactories>
   </system.data>
   <connectionStrings>
-    <add name="MediaManagerDb" connectionString="Data Source='C:/Users/User/Documents/TallerDeProgramacion/MediaManagerDb.sdf'; LCID=1033; Password='d7fj39WQ'; Encrypt = FALSE;" providerName="System.Data.SqlServerCe.4.0" />
+    <add name="MediaManagerDb" connectionString="Data Source='./MediaManagerDb.sdf'; LCID=1033; Password='d7fj39WQ'; Encrypt = FALSE;" providerName="System.Data.SqlServerCe.4.0" />
   </connectionStrings>
 </configuration>
