--- a/packages.config
+++ b/packages.config
@@ -3,4 +3,5 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="EntityFramework.SqlServerCompact" version="6.4.4" targetFramework="net48" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
 </packages>
